[package]
name = "dsm-launcher"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1", features = ["macros", "rt-multi-thread"] }
anyhow = "1"
graphql_client = "0.14"
reqwest = { version = "0.12.15", features = ["json", "blocking", "rustls-tls"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1", features = ["derive"] }
chrono = "0.4"
